fixed sidebar header alignment when logged in

--- a/resources/styles/_sidebar.scss
+++ b/resources/styles/_sidebar.scss
@@ -93,6 +93,7 @@ $sidebar-subsection-bg-color: rgba(255,255,255, 0.04);
 
     .icon-arrow-down {
         font-size: 12px;
+        line-height: normal;
     }
 }
 
